--- a/server/src/views/home.ejs
+++ b/server/src/views/home.ejs
@@ -14,7 +14,7 @@
     </div>
     <!--Form to add new book (title, description, price, author, sale_percent, stock)-->
     <div class="form-book-create">
-      <form action="books/" method="POST">
+      <form action="books/" method="POST" enctype="multipart/form-data">
         <label for="title">Title:</label>
         <input type="text" id="title" name="title" />
         <br />
@@ -30,7 +30,9 @@
         <label for="stock">Stock:</label>
         <input type="number" id="stock" name="stock" />
         <br />
-        <button type="submit">Add Book</button>
+        <label for="image">Image:</label>
+        <input type="file" name="image" />
+        <button type="submit">Create Book</button>
       </form>
     </div>
   </body>
