--- a/client/src/styles/Manage.css
+++ b/client/src/styles/Manage.css
@@ -1,17 +1,17 @@
-body .button-add{
-    align-items: center;
-    display: flex;
-    justify-content: space-between ;
+body .button-add {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
 }
 
-.button-add h1{
-    color: green;
-      margin-left: 50px;
-      margin-top: 20px;
+.button-add h1 {
+  color: #43CD80;
+  margin-left: 50px;
+  margin-top: 20px;
 }
 
-.button-add button{
-    margin-right: 40px;
-      margin-top: 20px;
-      margin-bottom: 5px;
+.button-add button {
+  margin-right: 40px;
+  margin-top: 20px;
+  margin-bottom: 5px;
 }
