--- a/client/src/styles/Admin.css
+++ b/client/src/styles/Admin.css
@@ -1,14 +1,13 @@
 .admin-container {
     display: flex;
-} 
+}
 
-.admin_sidebar{
+/* .admin_sidebar{
     height: 1000px;
     background-image: url('../image/background-banner.png');
-}
+} */
 
-.admin-content{
-    padding-left: 20px;
-    padding-right: 20px;
+.admin-content {
+    padding-left: 40px;
+    padding-right: 40px;
 }
-
