--- a/server/src/views/home.ejs
+++ b/server/src/views/home.ejs
@@ -31,7 +31,7 @@
         <input type="number" id="stock" name="stock" />
         <br />
         <label for="image">Image:</label>
-        <input type="file" name="image" />
+        <input type="file" name="image" multiple />
         <button type="submit">Create Book</button>
       </form>
     </div>
