--- a/server/src/views/home.ejs
+++ b/server/src/views/home.ejs
@@ -30,8 +30,11 @@
         <label for="stock">Stock:</label>
         <input type="number" id="stock" name="stock" />
         <br />
-        <label for="image">Image:</label>
-        <input type="file" name="image" multiple />
+        <label for="primaryImage">Primary Image:</label>
+        <input type="file" id="primaryImage" name="primaryImage" />
+        <br />
+        <label for="otherImages">Other Images:</label>
+        <input type="file" id="otherImages" name="otherImages" multiple />
         <button type="submit">Create Book</button>
       </form>
     </div>
