article upload handle

--- a/server/src/views/home.ejs
+++ b/server/src/views/home.ejs
@@ -13,7 +13,7 @@
       <a href="#about">About</a>
     </div>
     <!--Form to add new book (title, description, price, author, sale_percent, stock)-->
-    <div class="form-book-create">
+    <div class="form-book-create" style="outline: 1px solid black">
       <form action="books/" method="POST" enctype="multipart/form-data">
         <label for="title">Title:</label>
         <input type="text" id="title" name="title" />
@@ -35,8 +35,33 @@
         <br />
         <label for="otherImages">Other Images:</label>
         <input type="file" id="otherImages" name="otherImages" multiple />
+        <br />
         <button type="submit">Create Book</button>
       </form>
     </div>
+    <!-- Form for register -->
+    <div class="form-register" style="outline: 1px solid black">
+      <form action="customers/" method="POST">
+        <label for="email">email:</label>
+        <input type="text" id="email" name="email" />
+        <br />
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" />
+        <br />
+        <button type="submit">Register</button>
+      </form>
+    </div>
+    <!-- Form to create new article -->
+    <div class="form-article-create" style="outline: 1px solid black">
+      <form action="articles/" method="POST" enctype="multipart/form-data">
+        <label for="title">Title:</label>
+        <input type="text" id="title" name="title" />
+        <br />
+        <label for="content">Content:</label>
+        <input type="text" id="content" name="content" />
+        <br />
+        <input type="file" id="image" name="image">
+        <button type="submit">Create Article</button>
+      </form>
   </body>
 </html>
