--- a/server/src/views/home.ejs
+++ b/server/src/views/home.ejs
@@ -38,7 +38,7 @@
         <br />
         <button type="submit">Create Book</button>
       </form>
-    </div>
+    </div> <br>
     <!-- Form for register -->
     <div class="form-register" style="outline: 1px solid black">
       <form action="customers/" method="POST">
@@ -50,7 +50,7 @@
         <br />
         <button type="submit">Register</button>
       </form>
-    </div>
+    </div><br>
     <!-- Form to create new article -->
     <div class="form-article-create" style="outline: 1px solid black">
       <form action="articles/" method="POST" enctype="multipart/form-data">
