--- a/server/src/views/home.ejs
+++ b/server/src/views/home.ejs
@@ -38,10 +38,11 @@
         <br />
         <button type="submit">Create Book</button>
       </form>
-    </div> <br>
+    </div>
+    <br />
     <!-- Form for register -->
     <div class="form-register" style="outline: 1px solid black">
-      <form action="customers/" method="POST">
+      <form action="customers" method="POST">
         <label for="email">email:</label>
         <input type="text" id="email" name="email" />
         <br />
@@ -50,18 +51,33 @@
         <br />
         <button type="submit">Register</button>
       </form>
-    </div><br>
+    </div>
+    <br />
     <!-- Form to create new article -->
     <div class="form-article-create" style="outline: 1px solid black">
-      <form action="articles/" method="POST" enctype="multipart/form-data">
+      <form action="articles" method="POST" enctype="multipart/form-data">
         <label for="title">Title:</label>
         <input type="text" id="title" name="title" />
         <br />
         <label for="content">Content:</label>
         <input type="text" id="content" name="content" />
         <br />
-        <input type="file" id="image" name="image">
+        <input type="file" id="image" name="image" />
         <button type="submit">Create Article</button>
       </form>
+    </div>
+    <br />
+    <!-- Form to log in -->
+    <div class="form-login" style="outline: 1px solid black">
+      <form action="login" method="POST">
+        <label for="email">email:</label>
+        <input type="text" id="email" name="email" />
+        <br />
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" />
+        <br />
+        <button type="submit">Login</button>
+      </form>
+    </div>
   </body>
 </html>
