--- a/server/src/views/home.ejs
+++ b/server/src/views/home.ejs
@@ -30,8 +30,8 @@
         <label for="stock">Stock:</label>
         <input type="number" id="stock" name="stock" />
         <br />
-        <label for="primaryImage">Primary Image:</label>
-        <input type="file" id="primaryImage" name="primaryImage" />
+        <label for="thumbnail">Thumbnail:</label>
+        <input type="file" id="thumbnail" name="thumbnail" />
         <br />
         <label for="otherImages">Other Images:</label>
         <input type="file" id="otherImages" name="otherImages" multiple />
