--- a/client/src/styles/InfoBooks.css
+++ b/client/src/styles/InfoBooks.css
@@ -6,8 +6,8 @@
 .product-image-detail {
     position: relative;
     padding: 10px;
-    border: solid 1px #DDDDDD;
-    border-radius: 20px;
+    border: solid 1px #EEEEEE;
+    border-radius: 10px;
     height: 500px;
 }
 
