--- a/server/src/views/home.ejs
+++ b/server/src/views/home.ejs
@@ -16,20 +16,22 @@
     <div class="form-book-create" style="outline: 1px solid black">
       <form action="books/" method="POST" enctype="multipart/form-data">
         <label for="title">Title:</label>
-        <input type="text" id="title" name="title" />
+        <input type="text" id="title" name="title" value="1"/>
         <br />
         <label for="description">Description:</label>
-        <input type="text" id="description" name="description" />
+        <input type="text" id="description" name="description" value="1"/>
         <br />
         <label for="price">Price:</label>
-        <input type="number" id="price" name="price" />
+        <input type="number" id="price" name="price" value="1"/>
         <br />
         <label for="author">Author:</label>
-        <input type="text" id="author" name="author" />
+        <input type="text" id="author" name="author" value="1"/>
         <br />
-        <label for="stock">Stock:</label>
-        <input type="number" id="stock" name="stock" />
+        <label for="quantity">Quantity:</label>
+        <input type="number" id="quantity" name="quantity" value="1"/>
         <br />
+        <label for="categoryId">Category:</label>
+        <input type="number" id="categoryI" name="categoryId" value="1"><br>
         <label for="thumbnail">Thumbnail:</label>
         <input type="file" id="thumbnail" name="thumbnail" />
         <br />
@@ -78,6 +80,14 @@
         <br />
         <button type="submit">Login</button>
       </form>
-    </div>
+    </div><br>
+    <!-- Form to create new category -->
+    <div class="form-category-create" style="outline: 1px solid black">
+      <form action="categories" method="POST">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" />
+        <br />
+        <button type="submit">Create Category</button>
+      </form>
   </body>
 </html>
