--- a/client/src/styles/Cart.css
+++ b/client/src/styles/Cart.css
@@ -72,3 +72,33 @@ tbody .price {
     align-items: center;
     width: 270px;
 }
+
+
+
+.btn-mua button.btn-buy-now {
+    margin-right: 0;
+    width: 200px;
+    background: white;
+    border-color: #007700;
+    color: #007700;
+    text-align: center !important;
+    display: block;
+    height: 60px;
+    font-weight: bold;
+    margin-left: auto;
+}
+
+.btn-mua button.btn-buy-now:hover {
+    background-color: #007700;
+    border-color: #007700;
+    color: white;
+}
+
+.btn-mua button:disabled {
+    padding: 0 20px;
+    cursor: default
+}
+
+.btn-mua button:disabled:hover {
+    color: #fff
+}
