fix return thumbnail path

--- a/server/src/views/home.ejs
+++ b/server/src/views/home.ejs
@@ -43,8 +43,9 @@
     </div>
     <br />
     <!-- Form for register -->
+     Register
     <div class="form-register" style="outline: 1px solid black">
-      <form action="customers" method="POST">
+      <form action="/auth/register" method="POST">
         <label for="email">email:</label>
         <input type="text" id="email" name="email" />
         <br />
@@ -70,8 +71,9 @@
     </div>
     <br />
     <!-- Form to log in -->
+     Login
     <div class="form-login" style="outline: 1px solid black">
-      <form action="login" method="POST">
+      <form action="/auth/login" method="POST">
         <label for="email">email:</label>
         <input type="text" id="email" name="email" />
         <br />
