--- a/client/src/styles/CheckOut.css
+++ b/client/src/styles/CheckOut.css
@@ -88,7 +88,7 @@
     width: 100%
 }
 
-.main .input-radio {
+/* .main .input-radio {
     border-color: #d9d9d9;
     background-color: #fff
 }
@@ -169,7 +169,7 @@
 
 .input-radio:checked:focus {
     outline: none
-}
+} */
 
 
 
