--- a/client/src/styles/Manage.css
+++ b/client/src/styles/Manage.css
@@ -15,3 +15,56 @@ body .button-add {
   margin-top: 20px;
   margin-bottom: 5px;
 }
+
+.customs-btns-numbers {
+  position: relative;
+  width: 100px;
+  margin-left: 650px;
+  display: flex;
+  justify-content: center;
+}
+
+.customs-btns-numbers button {
+  width: 30px;
+  height: 32px;
+  border: none;
+  background-color: transparent;
+  font-size: 14px;
+  color: #ee4f83;
+  padding: 0;
+  font-weight: 400;
+  float: left;
+  border-radius: 0;
+  line-height: 22px;
+  position: absolute;
+  z-index: 1;
+  right: 4px;
+  top: -2px;
+  text-align: center;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center
+}
+
+.customs-btns-numbers button.btn-minus {
+  left: 0;
+  top: 0
+}
+
+.customs-btns-numbers input {
+  float: left;
+  width: 100px;
+  height: 32px;
+  border: solid 1px #E5E5E5;
+  padding: 0 30px;
+  text-align: center;
+  font-size: 16px;
+  min-height: unset;
+  margin: 0;
+  border-radius: 5px
+}
+
+.customs-btns-numbers button.btn-minus {
+  left: 0;
+  top: 0
+}
