--- a/client/src/styles/Cart.css
+++ b/client/src/styles/Cart.css
@@ -46,6 +46,8 @@ tbody .status-delivering {
 
 .CartPageContainer {
     margin-top: 30px;
+    margin-left: 110px;
+    width: 100%;
 }
 
 .custom-btn-numbers {
