--- a/client/src/styles/InfoBooks.css
+++ b/client/src/styles/InfoBooks.css
@@ -8,14 +8,15 @@
     padding: 10px;
     border: solid 1px #EEEEEE;
     border-radius: 10px;
-    height: 500px;
+    height: auto;
 }
 
 .product-image-detail .mySwiper {
-    height: 500px;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: -50px;
+    margin-bottom: 50px;
 }
 
 
