--- a/client/src/styles/InfoBooks.css
+++ b/client/src/styles/InfoBooks.css
@@ -271,10 +271,16 @@
     display: block;
     height: 80px;
     font-weight: bold;
+    width: 250px;
+    margin-left: 30px;
 }
 
 .details-pro .btn-mua button.btn-buy-now:hover {
     background-color: #007700;
     border-color: #007700;
     color: white;
+}
+
+.ba-text-fpt {
+    color: #222222;
 }
