--- a/client/src/styles/InfoBooks.css
+++ b/client/src/styles/InfoBooks.css
@@ -15,6 +15,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    vertical-align: middle;
     margin-top: -50px;
     margin-bottom: 50px;
 }
